--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,54 @@
 /*  your css code here. If applicable */
+
+body{
+	background-color:#f5f5f5;
+	
+}
+.main{
+	display:flex;
+}
+img{
+	height:110px;
+	width:200px;
+	
+}
+h3{
+	font-size:18px;
+	font-weight:700;
+	text-align:center;
+}
+.header{
+	background-color: #011e29;
+    color:white;
+	text-align:center;
+	padding-top:20px;
+	padding-bottom:20px;
+	font-size:30px;
+	font-weight:700px;	
+}
+.latest-news-section{
+	background-color:white;
+	width:33vw;
+	height:200px;
+	padding:10px;
+	border-radius:15px;
+    margin:2px 1px;
+}
+.Main-article{
+	background-color:white;
+	width:66vw;
+	height:300px;
+	padding:10px;
+	border-radius:15px;
+	text-align:center;
+	margin-right:1px;
+}
+.pictorial-news-section{
+	background-color:white;
+	width:33vw;
+	height:60vh;
+	padding:0 30px;
+	border-radius:15px;
+	text-align:center;
+}
+
